{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 30,
  "lineage": "cfc17ea8-33bb-8b04-7cc0-4a44c6b74398",
  "resources": [
    {
      "module": "module.terraform-aws-ec2-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-1",
      "provider": "module.terraform-aws-ec2-1.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.terraform-aws-ec2-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-2",
      "provider": "module.terraform-aws-ec2-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a261c0e5f51090b1",
            "arn": "arn:aws:ec2:eu-central-1:121440059180:instance/i-06f52f646ce1bd5cd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mbition",
            "id": "i-06f52f646ce1bd5cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mbition",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f895cb582c43c1b3",
            "private_dns": "ip-10-0-1-200.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "public_dns": "ec2-54-93-33-97.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.33.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013265a810a5f3751",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096abd6804cca3ca6",
            "tags": {
              "Name": "mbition-instance"
            },
            "tags_all": {
              "Name": "mbition-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c806cfe76f0bf20c"
            ]
          },
          "dependencies": [
            "module.terraform-aws-ec2-1.aws_security_group.sg",
            "module.terraform-aws-ec2-1.aws_subnet.subnet-2",
            "module.terraform-aws-ec2-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "module.terraform-aws-ec2-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:internet-gateway/igw-0bf0464fc502e0d8e",
            "id": "igw-0bf0464fc502e0d8e",
            "owner_id": "121440059180",
            "tags": {
              "Name": "aws-ig-created-with-terraform"
            },
            "tags_all": {
              "Name": "aws-ig-created-with-terraform"
            },
            "vpc_id": "vpc-071abd00708c6a70b"
          },
          "dependencies": [
            "module.terraform-aws-ec2-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.terraform-aws-ec2-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:route-table/rtb-0e31abbf6148eee83",
            "id": "rtb-0e31abbf6148eee83",
            "owner_id": "121440059180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf0464fc502e0d8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071abd00708c6a70b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-aws-ec2-1.aws_internet_gateway.ig",
            "module.terraform-aws-ec2-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-1",
      "provider": "module.terraform-aws-ec2-1.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.terraform-aws-ec2-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-2",
      "provider": "module.terraform-aws-ec2-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb9d342817e10ecc",
            "route_table_id": "rtb-0e31abbf6148eee83",
            "subnet_id": "subnet-096abd6804cca3ca6"
          },
          "dependencies": [
            "module.terraform-aws-ec2-1.aws_internet_gateway.ig",
            "module.terraform-aws-ec2-1.aws_route_table.rt",
            "module.terraform-aws-ec2-1.aws_subnet.subnet-2",
            "module.terraform-aws-ec2-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.terraform-aws-ec2-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:security-group/sg-0c806cfe76f0bf20c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c806cfe76f0bf20c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-created-with-terraform",
            "name_prefix": "",
            "owner_id": "121440059180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-created-with-terraform"
            },
            "tags_all": {
              "Name": "SG-created-with-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-071abd00708c6a70b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-aws-ec2-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "module.terraform-aws-ec2-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:subnet/subnet-096abd6804cca3ca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096abd6804cca3ca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121440059180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPN-created-with-terraform"
            },
            "tags_all": {
              "Name": "VPN-created-with-terraform"
            },
            "vpc_id": "vpc-071abd00708c6a70b"
          },
          "dependencies": [
            "module.terraform-aws-ec2-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.terraform-aws-ec2-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:vpc/vpc-071abd00708c6a70b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c33b77a6c67494ac",
            "default_route_table_id": "rtb-049f8892d3ed597a3",
            "default_security_group_id": "sg-057eb97b41bb3e644",
            "dhcp_options_id": "dopt-052ccd8100899939d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071abd00708c6a70b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049f8892d3ed597a3",
            "owner_id": "121440059180",
            "tags": {
              "Name": "VPC-created-with-terraform"
            },
            "tags_all": {
              "Name": "VPC-created-with-terraform"
            }
          }
        }
      ]
    }
  ]
}